# boilerplate

./: .readthedocs.yaml  MANIFEST.in  Pipfile  README.rst  pyproject.toml  tox.ini
.github/workflows/: build.yml
docs/: conf.py
